added login restriction for blocked users and new route to change user status
